# daplin

./: .gitignore  CLAUDE.md  README.md
.state/: ARCHITECTURE.md  PLAN.md
docs/: CNAME  _config.yml  ai-collaboration.md  contributing.md  daplin-spec-v0.2.0.md  index.md  naming.md  project-description.md  rationale.md  spec.md
docs/src/: daplin-spec-v0.2.0.md  daplin-spec-v0.4.0.md  project-description-v0.2.0.md  project-description-v0.4.0.md
server/: pyproject.toml
server/src/daplin_server/: config.py  main.py
server/tests/: conftest.py
